# ctxgraph

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/ctxgraph-cli/: Cargo.toml
crates/ctxgraph-cli/src/: display.rs  main.rs
crates/ctxgraph-cli/src/commands/: decisions.rs  entities.rs  init.rs  log.rs  mcp.rs  mod.rs  query.rs  stats.rs
crates/ctxgraph-core/: Cargo.toml
crates/ctxgraph-core/tests/: core_tests.rs
crates/ctxgraph-extract/: Cargo.toml
crates/ctxgraph-extract/src/: api.rs  glirel.rs  lib.rs  llm_extract.rs  model_manager.rs  ollama.rs  pipeline.rs  rel.rs  remap.rs  schema.rs  temporal.rs
crates/ctxgraph-extract/tests/: benchmark_test.rs  cross_domain_test.rs  glirel_quality_test.rs  model_manager_tests.rs  multitask_benchmark.rs  real_world_test.rs  temporal_tests.rs
crates/ctxgraph-extract/tests/fixtures/: benchmark_episodes.json  cross_domain_episodes.json  real_world_tech_episodes.json
crates/ctxgraph-mcp/: Cargo.toml
crates/ctxgraph-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
crates/ctxgraph-mcp/tests/: protocol_test.rs
docs/: ARCHITECTURE.md  ROADMAP.md  benchmark.md
docs/blog/: sqlite-as-graph-database.md
scripts/: benchmark_comparison.json  benchmark_graphiti.py  compare_benchmarks.py  export_glirel_onnx.py  graphiti_benchmark_results.json  graphiti_vs_ctxgraph.py  head_to_head.py  validation_benchmark.py
