[package]
name = "ctxgraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for ctxgraph — local-first context graph engine"

[[bin]]
name = "ctxgraph"
path = "src/main.rs"

[dependencies]
ctxgraph = { version = "0.5.0", path = "../ctxgraph-core" }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
colored = "3"
dotenvy = "0.15"
