[package]
name = "ctxgraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for ctxgraph — local-first context graph engine"

[[bin]]
name = "ctxgraph"
path = "src/main.rs"

[dependencies]
ctxgraph = { version = "0.7.0", path = "../ctxgraph-core" }
ctxgraph-extract = { version = "0.7.0", path = "../ctxgraph-extract" }
ctxgraph-mcp = { version = "0.7.0", path = "../ctxgraph-mcp" }
ctxgraph-embed = { version = "0.7.0", path = "../ctxgraph-embed" }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
colored = "3"
dotenvy = "0.15"
