[package]
name = "ctxgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for ctxgraph — types, storage, query, temporal logic"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
ctxgraph-extract = { path = "../ctxgraph-extract", version = "0.5.0", optional = true }
strsim = { workspace = true }

[features]
default = ["extract"]
extract = ["dep:ctxgraph-extract"]

[dev-dependencies]
tempfile = "3"
